# jemsys

./: .clang-format  CMakeLists.txt  README.md  library.c  library.h
include/: agate.h  agate2.h  jemsys.h  quartz.h  quartz2.h  silica.h  silica2.h
include/agate/: core.h  deputy.h  mailbox.h  message.h  messages.h  mpmc_mailbox.h  mpsc_mailbox.h  spmc_mailbox.h  spsc_mailbox.h
include/agate/dispatch/collective_deputy/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/lazy_deputy/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/mpmc_mailbox/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/mpsc_mailbox/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/private_mailbox/: dynamic_local.h  local.h
include/agate/dispatch/proxy_deputy/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/spmc_mailbox/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/spsc_mailbox/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/thread_deputy/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/thread_pool_deputy/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/agate/dispatch/virtual_deputy/: dynamic_ipc.h  dynamic_local.h  ipc.h  local.h
include/opal/: agent.hpp  coro.hpp
include/quartz/: core.h  deputy.h  epoch.h  init.h  mm.h  module.h
sample/agate/mailbox/: main.cpp
sample/agate2/json/: main.cpp
sample/agate2/server/: main.cpp
sample/quartz/benchmark/: main.cpp
sample/rng/: main.cpp  rng.hpp  rng_lib.cpp  rng_lib.cu
src/: allocator.hpp  atomicutils.hpp  dictionary.cpp  dictionary.hpp  ipc.cpp  iterator.hpp  jemsys.cpp  memutils.hpp  pointer_set.hpp  silica.cpp  vector.hpp
src/agate/: agate.cpp  agent.cpp  agents.hpp  common.hpp  deputy.cpp  dispatch.cpp  handle.cpp  impl_macros.hpp  internal.hpp  mailbox.cpp  mailbox.h  message.cpp  mpmc_mailbox.cpp  mpsc_mailbox.cpp  private_mailbox.cpp  spmc_mailbox.cpp  spsc_mailbox.cpp  vtable.cpp
src/agate/dispatch/mpsc_mailbox/: dynamic_local.cpp  ipc.cpp  local.cpp
src/agate/dispatch/private_mailbox/: local.cpp
src/agate/dispatch/spmc_mailbox/: dynamic_ipc.cpp
src/agate/dispatch/spsc_mailbox/: ipc.cpp  local.cpp
src/agate2/: align.hpp  async.cpp  async.hpp  atomic.cpp  atomic.hpp  channel.hpp  channels.cpp  context.cpp  context.hpp  error.hpp  flags.hpp  fwd.hpp  handle.cpp  handle.hpp  internal.hpp  library.cpp  message.cpp  message.hpp  objects.cpp  objects.hpp  pool.hpp  signal.cpp  signal.hpp  thread.cpp  thread.hpp  vtable.cpp  vtable.hpp  wrapper.hpp
src/ipc/: error.hpp  file.hpp  ipc.cpp  memory.hpp  mpsc_mailbox.hpp  offset_ptr.hpp  process.hpp  segment.hpp  span.hpp  string.hpp
src/opal/: agent.cpp  coroutines.cpp
src/quartz/: deputy.cpp  epoch.cpp  init.c  init.cpp  internal.h  internal.hpp  kernel.cpp  kernel.hpp  mailbox.cpp  mm.c  mm.cpp  mm.hpp  module.cpp  priority_queue_test.cpp  queue.cpp  self.cpp  types.hpp
src/quartz/ipc/: error.hpp  offset_ptr.hpp  span.hpp  string.hpp
src/quartz2/: init.cpp
src/silica/: silica.cpp
src/silica2/: interface.cpp
src/support/: allocator.hpp  atomicutils.hpp  environment.cpp  environment.hpp  handles.hpp  heaputils.hpp  memutils.hpp  object_manager.cpp  object_manager.hpp  pointer_set.hpp  vector.cpp  vector.hpp
test/: catch.cpp
test/agate/: mailbox.cpp  solo_mailbox.cpp
test/quartz/: init.cpp  init_test.cpp  logging.cpp  priority_queue_test.cpp  speed_test.cpp
test/silica/: attributes.cpp  module_builder.cpp
test/support/: object_manager.cpp
